--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="title_activity_aftersales_check_sheet_demo_service">Aftersales Check Sheet Demo LiveCard</string>
     <string name="action_stop">Stop</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_main">Aftersales Check Sheet Immersion</string>
 
 </resources>
