--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_main">Aftersales Check Sheet Immersion</string>
     <string name="APIDomain">http://api.inchcape.com.hk</string>
-    <string name="Loading">Loading...</string>
+    <string name="Loading">Loading</string>
     <string name="Confirm">Confirm?</string>
     <string name="Done">Done</string>
     <string name="title_activity_menu">Check Sheet Demo</string>
